--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,10 @@ dependencies {
     implementation "com.louiscad.splitties:splitties-views:3.0.0-alpha04"
     implementation "com.louiscad.splitties:splitties-views-appcompat:3.0.0-alpha04"
 
+    // Google Services
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.0"
@@ -144,3 +148,5 @@ static def buildTime() {
     def df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm'Z'")
     return df.format(new Date())
 }
+
+apply plugin: 'com.google.gms.google-services'
