--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,8 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            zipAlignEnabled true
             shrinkResources true
-            debuggable false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -53,22 +51,22 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation "androidx.annotation:annotation:1.0.2"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation "androidx.recyclerview:recyclerview:1.1.0-alpha03"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.annotation:annotation:1.1.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
 
     // KTX
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha05'
-    implementation 'androidx.collection:collection-ktx:1.1.0-alpha03'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha06'
+    implementation 'androidx.collection:collection-ktx:1.1.0-beta01'
 
     // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha03'
-    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0-alpha03"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha04'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
 
     // Navigation
     implementation "android.arch.navigation:navigation-fragment:1.0.0"
@@ -96,7 +94,7 @@ dependencies {
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.14.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
 
@@ -106,14 +104,14 @@ dependencies {
     implementation 'com.serjltt.moshi:moshi-lazy-adapters:2.2'
 
     // Dagger
-    implementation 'com.google.dagger:dagger:2.21'
-    kapt 'com.google.dagger:dagger-compiler:2.21'
-    implementation 'com.google.dagger:dagger-android:2.21'
-    implementation 'com.google.dagger:dagger-android-support:2.21'
-    kapt 'com.google.dagger:dagger-android-processor:2.21'
+    implementation 'com.google.dagger:dagger:2.22.1'
+    kapt 'com.google.dagger:dagger-compiler:2.22.1'
+    implementation 'com.google.dagger:dagger-android:2.22.1'
+    implementation 'com.google.dagger:dagger-android-support:2.22.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.22.1'
 
     // RxJava
-    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
@@ -123,7 +121,6 @@ dependencies {
     // Util
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.0"
 
     // View
@@ -135,9 +132,9 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // Test
-    testImplementation 'junit:junit:4.13-beta-1'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'junit:junit:4.13-beta-2'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
 }
 
 static def gitSha() {
