--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.android.material:material:1.1.0-alpha05'
-
-    // KTX
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha06'
     implementation 'androidx.collection:collection-ktx:1.1.0-beta01'
@@ -90,7 +88,10 @@ dependencies {
 
     // Google Services
     implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-common-ktx:16.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:18.2.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
