--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,11 @@ android {
         vectorDrawables.useSupportLibrary = true
         buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
         buildConfigField "String", "BUILD_TIME", "\"${buildTime()}\""
+        buildConfigField 'String', "FATSECRET_API_BASE_URL", getLocalProperty("FATSECRET_API_BASE_URL")
+        buildConfigField 'String', "FATSECRET_CONSUMER_KEY", getLocalProperty("FATSECRET_CONSUMER_KEY")
+        buildConfigField 'String', "FATSECRET_CONSUMER_SECRET", getLocalProperty("FATSECRET_CONSUMER_SECRET")
+        buildConfigField 'String', "FATSECRET_AUTH_TOKEN", getLocalProperty("FATSECRET_AUTH_TOKEN")
+        buildConfigField 'String', "FATSECRET_AUTH_SECRET", getLocalProperty("FATSECRET_AUTH_SECRET")
     }
     buildTypes {
         release {
@@ -51,20 +56,20 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.annotation:annotation:1.1.0-beta01'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.annotation:annotation:1.1.0-rc01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha06'
-    implementation 'androidx.collection:collection-ktx:1.1.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha01'
+    implementation 'androidx.fragment:fragment-ktx:1.1.0-alpha08'
+    implementation 'androidx.collection:collection-ktx:1.1.0-rc01'
 
     // Lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-alpha04'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0-alpha01'
 
     // Navigation
     implementation "android.arch.navigation:navigation-fragment:1.0.0"
@@ -92,12 +97,15 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.github.rosariopfernandes.fireXtensions:database:0.3.4'
+    implementation 'com.google.guava:guava:27.1-android'
 
-    // Retrofit
+    // Networking
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
+    implementation 'se.akerfeldt:okhttp-signpost:1.1.0'
+    implementation 'oauth.signpost:signpost-core:1.2.1.2'
 
     // Moshi
     implementation "com.squareup.moshi:moshi:1.8.0"
@@ -117,7 +125,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     // Storage
-    implementation 'com.github.pakoito:RxPaper2:1.4.0'
+    implementation 'io.paperdb:paperdb:2.6'
 
     // Util
     implementation 'com.github.bumptech.glide:glide:4.9.0'
@@ -128,9 +136,9 @@ dependencies {
 
     // View
     implementation 'com.afollestad.material-dialogs:core:2.8.1'
-    //implementation 'com.afollestad.material-dialogs:input:2.8.1'
-    //implementation 'com.afollestad.material-dialogs:files:2.8.1'
-    //implementation 'com.afollestad.material-dialogs:color:2.8.1'
+    // implementation 'com.afollestad.material-dialogs:input:2.8.1'
+    // implementation 'com.afollestad.material-dialogs:files:2.8.1'
+    // implementation 'com.afollestad.material-dialogs:color:2.8.1'
     implementation 'com.afollestad.material-dialogs:datetime:2.8.1'
     implementation 'com.afollestad.material-dialogs:lifecycle:2.8.1'
 
@@ -140,9 +148,9 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 
     // Test
-    testImplementation 'junit:junit:4.13-beta-2'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
+    testImplementation 'junit:junit:4.13-beta-3'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 }
 
 static def gitSha() {
