--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,12 +135,13 @@ dependencies {
     implementation "com.wajahatkarim3.easyvalidation:easyvalidation-core:1.0.1"
 
     // View
-    implementation 'com.afollestad.material-dialogs:core:2.8.1'
-    // implementation 'com.afollestad.material-dialogs:input:2.8.1'
-    // implementation 'com.afollestad.material-dialogs:files:2.8.1'
-    // implementation 'com.afollestad.material-dialogs:color:2.8.1'
-    implementation 'com.afollestad.material-dialogs:datetime:2.8.1'
-    implementation 'com.afollestad.material-dialogs:lifecycle:2.8.1'
+    implementation 'com.afollestad.material-dialogs:core:3.0.0-alpha1'
+    implementation 'com.afollestad.material-dialogs:input:3.0.0-alpha1'
+    // implementation 'com.afollestad.material-dialogs:files:3.0.0-alpha1'
+    // implementation 'com.afollestad.material-dialogs:color:3.0.0-alpha1'
+    implementation 'com.afollestad.material-dialogs:datetime:3.0.0-alpha1'
+    implementation 'com.afollestad.material-dialogs:lifecycle:3.0.0-alpha1'
+    implementation 'com.afollestad.material-dialogs:bottomsheets:3.0.0-alpha1'
 
     // Debug
     implementation 'com.jakewharton.timber:timber:4.7.1'
