--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.fatlytics.app.app.App"
+        android:name=".app.App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fatlytics.Light.DarkActionBar"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name="com.fatlytics.app.ui.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/Theme.Fatlytics.Light.DarkActionBar.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +26,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.fatlytics.app.ui.main.MainActivity" />
         <activity android:name=".ui.registration.RegistrationActivity" />
+        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.addfood.AddFoodActivity" />
+
 
     </application>
 
