--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs"
 
-def versionMajor = 0
+def versionMajor = 1
 def versionMinor = 0
-def versionPatch = 1
+def versionPatch = 0
 def versionBuild = 0
-def versionStage = "alpha"
+def versionStage = ""
 
 android {
     compileSdkVersion 28
