--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:name="com.fatlytics.app.app.App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/MyTheme.DayNight"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name="com.fatlytics.app.ui.splash.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/MyTheme.DayNight.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,6 +27,10 @@
         </activity>
 
         <activity android:name="com.fatlytics.app.ui.main.MainActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
